--- a/slides/08-type-classes.tex
+++ b/slides/08-type-classes.tex
@@ -41,7 +41,7 @@
     \end{itemize}
   \end{block}
   \begin{block}<+->{Examples}
-\begin{verbatim}
+\begin{lstlisting}
 -- elem x xs : is x an element of list xs?
 -- type a must have equality
 elem :: Eq a => a -> [a] -> Bool
@@ -51,7 +51,7 @@ insert :: Ord a => a -> [a] -> [a]
 -- square x : compute the square of x
 -- type a has numeric operations
 square :: Num a => a -> a
-\end{verbatim}
+\end{lstlisting}
   \end{block}
 \end{frame}
 %----------------------------------------------------------------------
@@ -72,45 +72,45 @@ square :: Num a => a -> a
   \frametitle{Classes and Instances}
   \begin{itemize}
   \item A class declaration \textbf{only} specifies a signature (i.e., the class members and their types)
-\begin{verbatim}
+\begin{lstlisting}
 class Num a where
   (+), (*), (-) :: a -> a -> a
   negate, abs, signum :: a -> a
   fromInteger :: Integer -> a
-\end{verbatim}
+\end{lstlisting}
   \item An instance declaration specifies that a type belongs to a class by giving definitions for all class members
-\begin{verbatim}
+\begin{lstlisting}
 instance Num Int where ...
 instance Num Integer where ...
 instance Num Double where ...
 instance Num Float where ...
-\end{verbatim}
+\end{lstlisting}
   \item This info can be obtained from GHCI by
-\begin{verbatim}
+\begin{lstlisting}
 :i Num 
-\end{verbatim}
+\end{lstlisting}
   \end{itemize}
 \end{frame}
 %----------------------------------------------------------------------
 \begin{frame}[fragile]
   \frametitle{Equality}
   \begin{block}<+->{The type class \texttt{Eq}}
-\begin{verbatim}
+\begin{lstlisting}
 class Eq a where
   (==), (/=) :: a -> a -> Bool
   x /= y = not (x == y)         -- default definition
-\end{verbatim}
+\end{lstlisting}
     An instance must only provide \texttt{(==)}.
   \end{block}
   \begin{block}<+->{Instances of \texttt{Eq}}
-\begin{verbatim}
-instance Eq Int -- Defined in ‘GHC.Classes’
-instance Eq Float -- Defined in ‘GHC.Classes’
-instance Eq Double -- Defined in ‘GHC.Classes’
-instance Eq Char -- Defined in ‘GHC.Classes’
-instance Eq Bool -- Defined in ‘GHC.Classes’
+\begin{lstlisting}
+instance Eq Int -- Defined in 'GHC.Classes'
+instance Eq Float -- Defined in 'GHC.Classes'
+instance Eq Double -- Defined in 'GHC.Classes'
+instance Eq Char -- Defined in 'GHC.Classes'
+instance Eq Bool -- Defined in 'GHC.Classes'
 {- and many more -}
-\end{verbatim}
+\end{lstlisting}
   \end{block}
   \begin{alertblock}<+->{Question}
     Does equality make sense at every type?
@@ -122,10 +122,10 @@ instance Eq Bool -- Defined in ‘GHC.Classes’
   \begin{block}<+->{When are two pairs equal?}
   \end{block}
   \begin{block}<+->{Solution}
-\begin{verbatim}
+\begin{lstlisting}
 instance (Eq a, Eq b) => Eq (a, b) where
   (a1, b1) == (a2, b2) = a1 == a2 && b1 == b2
-\end{verbatim}
+\end{lstlisting}
   \end{block}
   \begin{block}<+->{Is this definition recursive?}
   \end{block}
@@ -138,12 +138,12 @@ instance (Eq a, Eq b) => Eq (a, b) where
   \begin{block}<+->{When are two lists equal?}
   \end{block}
   \begin{block}<+->{Solution}
-\begin{verbatim}
+\begin{lstlisting}
 instance Eq a => Eq [a] where
   [] == [] = True
   (x:xs) == (y:ys) = x == y && xs == ys
   _ == _ = False
-\end{verbatim}
+\end{lstlisting}
   \end{block}
   \begin{block}<+->{Is this definition recursive?}
   \end{block}
@@ -155,31 +155,31 @@ instance Eq a => Eq [a] where
 \begin{frame}[fragile]
   \frametitle{Handwriting vs deriving an instance}
   \begin{block}<+->{Remember the Hearts game}
-\begin{verbatim}
+\begin{lstlisting}
 data Color = Black | Red
   deriving (Show)
-\end{verbatim}
+\end{lstlisting}
   \end{block}
   \begin{block}<+->{Define your own equality}
-\begin{verbatim}
+\begin{lstlisting}
 instance Eq Color where
   Black == Black = True
   Red == Red = True
   _ == _ = False
-\end{verbatim}
+\end{lstlisting}
   \end{block}
   \begin{block}<+->{Same result as deriving \texttt{Eq}}
-\begin{verbatim}
+\begin{lstlisting}
 data Color = Black | Red
   deriving (Show, Eq)
-\end{verbatim}
+\end{lstlisting}
   \end{block}
 \end{frame}
 %----------------------------------------------------------------------
 \begin{frame}[fragile]
   \frametitle{Further useful classes}
   \begin{block}<+->{Show and Read}
-\begin{verbatim}
+\begin{lstlisting}
 class Show a where
   show :: a -> String
   {- ... -}
@@ -187,7 +187,7 @@ class Show a where
 class Read a where
   read :: String -> a
   {- ... -}
-\end{verbatim}
+\end{lstlisting}
     \begin{itemize}
     \item Predefined for most built-in types
     \item Derivable for most datatype definitions
@@ -197,7 +197,7 @@ class Read a where
 %----------------------------------------------------------------------
 \begin{frame}[fragile]
   \frametitle{The \texttt{Ord} class (derivable)}
-\begin{verbatim}
+\begin{lstlisting}
 class Eq a => Ord a where
   compare :: a -> a -> Ordering
   (<) :: a -> a -> Bool
@@ -207,8 +207,8 @@ class Eq a => Ord a where
   max :: a -> a -> a
   min :: a -> a -> a
 
-data Ordering = LT | EQ | GT 	-- Defined in ‘GHC.Types’
-\end{verbatim}
+data Ordering = LT | EQ | GT 	-- Defined in 'GHC.Types'
+\end{lstlisting}
 \end{frame}
 %----------------------------------------------------------------------
 \begin{frame}[fragile]
@@ -217,24 +217,24 @@ data Ordering = LT | EQ | GT 	-- Defined in ‘GHC.Types’
   \item \texttt{Enum} (derivable)
   \item \texttt{Bounded} (derivable)
   \end{itemize}
-\begin{verbatim}
-\end{verbatim}
+\begin{lstlisting}
+\end{lstlisting}
 \end{frame}
 %----------------------------------------------------------------------
 \begin{frame}[fragile]
   \frametitle{Ambiguity}
 \onslide<+->{Some combinations of overloaded functions can lead to ambiguity}
-\begin{verbatim}
+\begin{lstlisting}
 f x = read (show x)
 g x = show (read x)
-\end{verbatim}
+\end{lstlisting}
 \begin{block}<+->{What are types of \texttt{f} and \texttt{g}?}
 \end{block}
 \begin{block}<+->{Solution}
-\begin{verbatim}
+\begin{lstlisting}
 f :: (Read a, Show b) => b -> a
 g :: String -> String
-\end{verbatim}
+\end{lstlisting}
 \end{block}
 \end{frame}
 %----------------------------------------------------------------------
@@ -253,7 +253,7 @@ g :: String -> String
   \frametitle{Wrapup}
   \begin{alertblock}{Type classes}
   \begin{itemize}
-  \item provides a signature for an abstract data type
+  \item provide a signature for an abstract data type
   \item instances provide implementations at unrelated types
   \item many classes are predefined and derivable
   \item pervasively used in Haskell / some pitfalls
